--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,10 @@
 google-api-python-client 
 google-auth-httplib2 
 google-auth-oauthlib
-email
-base64
+#email
+#base64
 apiclient
-mimetypes
+#mimetypes
 pyexcel-ods
 pyexcel-xlsx
+oauth2client
